added SEO Optomization & renamed image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My first Portfolio job">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,7 @@
     <header>
         <h2><a href="index.html">&lt;/S<span class="colortext">upre</span>X&gt;</a></h2>
         <input type="checkbox" id="check_menu" onclick="MenuChange()">
-        <label for="check_menu"><img id="menuButton" src="images/Open.svg"></label>
+        <label for="check_menu"><img id="menuButton" src="images/Open.svg" alt="Menu button"></label>
 
         <div class="menu">
             <a href="#About-me">About Me</a>
@@ -43,11 +44,11 @@
         <div class="illustrations">
             <div class="illustrations-swipe">
                 <div class="swiper mySwiper">
-                    <img src="images/figures.svg">
+                    <img src="images/shapes.svg" alt="shapes-bg">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="images/person-1.svg"></div>
-                        <div class="swiper-slide"><img src="images/person-2.svg"></div>
-                        <div class="swiper-slide"><img src="images/person-3.svg"></div>
+                        <div class="swiper-slide"><img src="images/person-1.svg" alt="A Nice Person"></div>
+                        <div class="swiper-slide"><img src="images/person-2.svg" alt="An Elegant Person"></div>
+                        <div class="swiper-slide"><img src="images/person-3.svg" alt="A Cool Person"></div>
                     </div>
                 </div>
             </div>
@@ -150,7 +151,7 @@ function makeConstructorFromObject(fields, proto) {
 
     <div class="about_me" id="About-me">
         <div class="logo">
-            <img src="images/logo.svg" height="90">
+            <img src="images/logo.svg" alt="Profile logo" height="90">
         </div>
         <p class="hidden">A few years ago, I became interested in developing websites and interfaces. Since then, I have been steadily improving my skills. Now I am developing websites and web applications to order or for myself.</p>
     </div>
@@ -160,36 +161,36 @@ function makeConstructorFromObject(fields, proto) {
         <div class="skill_line" id="skills_container">
             <div class="card-skill-html hidden" id="problemo1">
                 <div class="card-skill-html-content">
-                    <img src="images/icon_html.svg">
-                    <img src="images/icon_html--hover.svg">
+                    <img src="images/icon_html.svg" alt="HTML icon">
+                    <img src="images/icon_html--hover.svg" alt="HTML colored icon">
                     <list>HTML5</list>
                 </div>
             </div>
             <div class="card-skill-css hidden" id="problemo2">
                 <div class="card-skill-css-content">
-                    <img src="images/icon_css.svg">
-                    <img src="images/icon_css--hover.svg">
+                    <img src="images/icon_css.svg" alt="CSS icon">
+                    <img src="images/icon_css--hover.svg" alt="CSS coloder icon">
                     <list>CSS3</list>
                 </div>
             </div>
             <div class="card-skill-js hidden" id="problemo3">
                 <div class="card-skill-js-content">
-                    <img src="images/icon_js.svg">
-                    <img src="images/icon_js--hover.svg">
+                    <img src="images/icon_js.svg" alt="JS icon">
+                    <img src="images/icon_js--hover.svg" alt="JS colored icon">
                     <list>JavaScript</list>
                 </div>
             </div>
             <div class="card-skill-scss hidden" id="problemo4">
                 <div class="card-skill-scss-content">
-                    <img src="images/icon_scss.svg">
-                    <img src="images/icon_scss--hover.svg">
+                    <img src="images/icon_scss.svg" alt="SCSS icon">
+                    <img src="images/icon_scss--hover.svg" alt="SCSS coloder icon">
                     <list>SCSS</list>
                 </div>
             </div>
             <div class="card-skill-git hidden" id="problemo5">
                 <div class="card-skill-git-content">
-                    <img src="images/icon_git.svg">
-                    <img src="images/icon_git--hover.svg">
+                    <img src="images/icon_git.svg" alt="Git icon">
+                    <img src="images/icon_git--hover.svg" alt="Git coloder icon">
                     <list>Git</list>
                 </div>
             </div>
@@ -203,7 +204,7 @@ function makeConstructorFromObject(fields, proto) {
                 <div class="card-portfolio-1-description">
                     <h3>Outdoor Activities</h3>
                     <h4>Scroll animated website</h4>
-                    <img src="images/Line_1.svg">
+                    <img src="images/Line_1.svg" alt="Line">
                     <p>Discover how you can combine recreation with sport. <br>Practice is vacation for us.</p>
                     <div class="see_more_1"><a href="Outdoors/index.html" target="_blank">See more →</a></div>  
                 </div>
@@ -214,7 +215,7 @@ function makeConstructorFromObject(fields, proto) {
                 <div class="card-portfolio-2-description">
                     <h3>Login & Register</h3>
                     <h4>HTML, CSS, JS</h4>
-                    <img src="images/Line_1.svg">
+                    <img src="images/Line_1.svg" alt="Line">
                     <p>Transparent Website <br> with Login and Registration Form. Check out my page.</p>
                     <div class="see_more_2"><a href="Login-Menu/index.html" target="_blank">See more →</a></div>
                 </div>
@@ -225,7 +226,7 @@ function makeConstructorFromObject(fields, proto) {
                 <div class="card-portfolio-3-description">
                     <h3>Business Website</h3>
                     <h4>HTML, SCSS, JS</h4>
-                    <img src="images/Line_1.svg">
+                    <img src="images/Line_1.svg" alt="Line">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="see_more_3"><a href="MyProject.html" target="_blank">See more →</a></div>
                 </div>
@@ -244,21 +245,21 @@ function makeConstructorFromObject(fields, proto) {
             <address>
                 <div class="social_media_1">
                     <div class="vk">
-                        <img src="images/contact_vk.svg">
+                        <img src="images/contact_vk.svg" alt="Contact VK icon">
                         <a href="https://vk.com/RomanSuprun" target="_blank">@Roman Suprun</a>
                     </div>
                     <div class="mail">
-                        <img src="images/contact_mail.svg">
+                        <img src="images/contact_mail.svg" alt="Contact Mail icon">
                         <a href="mailto:froair@list.ru" target="_blank">SupreX@mail.com</a>
                     </div>
                 </div>
                 <div class="social_media_2">
                     <div class="github">
-                        <img src="images/contact_github.svg">
+                        <img src="images/contact_github.svg" alt="Contact GitHub icon">
                         <a href="https://github.com/DrexyXn" target="_blank">DrexyXn</a>
                     </div>
                     <div class="figma">
-                        <img src="images/contact_figma.svg">
+                        <img src="images/contact_figma.svg" alt="Contact Figma icon">
                         <a href="https://www.figma.com/@Drexy" target="_blank">Drexy</a>
                     </div>
                 </div>
