--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 
     <link rel="stylesheet" href="styles/style.css">
-
     <title>SupreX</title>
 </head>
 <body>
@@ -266,6 +265,6 @@ function makeConstructorFromObject(fields, proto) {
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
 </body>
 </html>
