--- a/index.html
+++ b/index.html
@@ -265,6 +265,6 @@ function makeConstructorFromObject(fields, proto) {
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
